--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,10 @@ body {
   font-size: 3rem;
 }
 
+.threepointfive {
+  font-size: 3rem;
+}
+
 .four .text-box {
   width: 600px;
   margin: 0 auto;
