--- a/style/style.css
+++ b/style/style.css
@@ -134,20 +134,20 @@ body {
   /* transform: scale(0.1); */
 }
 
-.baloons img {
+.hearts img {
   display: inline-block;
   position: absolute;
 }
 
-.baloons img:nth-child(even) {
+.hearts img:nth-child(even) {
   left: -10%;
 }
 
-.baloons img:nth-child(odd) {
+.hearts img:nth-child(odd) {
   right: -10%;
 }
 
-.baloons img:nth-child(3n + 0) {
+.hearts img:nth-child(3n + 0) {
   left: 30%;
 }
 
