--- a/style/style.css
+++ b/style/style.css
@@ -308,6 +308,13 @@ body {
   margin: -10em auto 0 auto;
 }
 
+.six .babe {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  width: 400px;
+  height: 400px;
+}
 /* ============================================== Candle
 */
 
