--- a/style/style.css
+++ b/style/style.css
@@ -310,10 +310,10 @@ body {
 
 #babe {
   display: block;
+  size: 200px;
   position: absolute;
   top: 50px;
-  width: 250px;
-  height: 250px;
+ 
 }
 /* ============================================== Candle
 */
