--- a/style/style.css
+++ b/style/style.css
@@ -311,6 +311,7 @@ body {
 #song {
   display: block;
   position: relative auto;
+  top:200px;
 }
 /* ============================================== Candle
 */
