--- a/style/style.css
+++ b/style/style.css
@@ -311,6 +311,10 @@ body {
 #song {
   display: block;
   position: relative;
+  top: 50%;
+  margin-left: auto;
+  margin-right: auto;
+
   
 }
 /* ============================================== Candle
